Refine details page: update checkboxes and social media inputs

--- a/style.css
+++ b/style.css
@@ -393,6 +393,12 @@ input[type="radio"] {
     height: 18px;
 }
 
+input[type="checkbox"]:disabled {
+    accent-color: #000000;
+    opacity: 1;
+    cursor: not-allowed;
+}
+
 .radio-group,
 .checkbox-group {
     display: flex;
